# SEO-page-analyzer

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  setup.cfg
.github/workflows/: continious-integration.yml
page_analyzer/: __init__.py  app.py  database_manager.py  tools.py
page_analyzer/templates/: basement.html  index.html  start_page.html  urls_checks_list.html  urls_list.html
templates/: index.html
