[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page analyzer"
authors = ["bogdan <telioko@tutanota.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"
gunicorn = "^21.2.0"
pip = "^23.2.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.1"
pytest-cov = "^4.1.0"

[scripts]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
